# makefile_tutorial

./: Makefile  Makefile_cmd.txt  README.md  main.cpp  zf.cpp  zf.h
.ipynb_checkpoints/: README-checkpoint.md
Cmake_tutorial/: README.md
Cmake_tutorial/.ipynb_checkpoints/: README-checkpoint.md
Cmakefind/: CMakeLists.txt  hello.cpp  main.cpp
Cmakefind/cmake/: FindHELLO.cmake
Cmakefind/include/: hello.h
